--- a/assets/css/section/transition1.css
+++ b/assets/css/section/transition1.css
@@ -14,5 +14,4 @@
     height: 40vh;
     top: 40%;
     transform: translate(-50%, -50%);
-    overflow-x: hidden;
 }
